fix: z-index on swiper when drawer active

--- a/src/index.scss
+++ b/src/index.scss
@@ -33,7 +33,7 @@ body {
 		position: absolute;
 		top: 50%;
 		transform: translateY(-50%);
-		z-index: 10;
+		z-index: 1;
 		width: 35px;
 		height: 35px;
 		border-radius: 100%;
